Styling and squashed a couple of bugs

--- a/lambda_notes/src/App.css
+++ b/lambda_notes/src/App.css
@@ -2,7 +2,7 @@ body {
   box-sizing: border-box;
   max-width: 100%;
   width: 1100px;
-  margin: 15px;
+  margin: 0 auto;
 }
 .sidebar {
   background-color: #d3d2d3;
@@ -103,4 +103,15 @@ input {
 }
 .singlenote {
   margin-left: 50px;
+}
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.8rem;
+  padding: 40px;
+}
+.modal {
+  margin: 60px;
 }
